# swarf

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  DSL.md  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: bracket.swarf  chamfer-deburr.swarf  enclosure-lid.swarf  faceplate.swarf  fin-116-x-14.dsl  fin-116-x-14.swarf  flange.dsl  m16-selector.dsl  patterns.swarf  test-circle-pocket.dsl  thin-ribs.swarf  tool-library-demo.swarf  tools.json
src/: main.rs
src/ast/: mod.rs
src/black_book/: calculations.rs  materials.rs  mod.rs  validators.rs
src/codegen/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/post/: haas.rs  linuxcnc.rs  mach3.rs  mod.rs
src/tool_library/: mod.rs
src/validator/: mod.rs
src/viz/: mod.rs
swarf-viz-wasm/: Cargo.toml  README.md  build.sh  index.html
swarf-viz-wasm/src/: camera.rs  gcode.rs  lib.rs  renderer.rs
