[package]
name = "swarf"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/FuturePresentLabs/swarf"
authors = ["Future Present Labs"]

[features]
default = []
viz = ["dep:warp", "dep:tokio", "dep:notify", "dep:serde_json", "dep:futures"]

[dependencies]
logos = "0.14"          # Lexer generation
ariadne = "0.4"         # Error reporting
thiserror = "1.0"       # Error handling
serde = { version = "1.0", features = ["derive"] }

# Viz dependencies (optional)
warp = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
notify = { version = "6", optional = true }
serde_json = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
wgpu = "28.0.0"
winit = "0.30.12"
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "swarf"
path = "src/main.rs"
