[package]
name = "swarf"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/FuturePresentLabs/swarf"
authors = ["Future Present Labs LLC <contact@futurepresentlabs.com>"]
build = "build.rs"

[features]
default = []
viz = ["dep:warp", "dep:tokio", "dep:notify", "dep:futures", "dep:image"]
viz-3d = ["viz"]

[dependencies]
logos = "0.14"          # Lexer generation
ariadne = "0.4"         # Error reporting
thiserror = "1.0"       # Error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      # JSON parsing for tool library

# Viz dependencies (optional)
warp = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
notify = { version = "6", optional = true }
futures = { version = "0.3", optional = true }
image = { version = "0.25", optional = true }
wgpu = "28.0.0"
winit = "0.30.12"
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
uom = { version = "0.37.0", features = ["f64", "si"] }

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "swarf"
path = "src/main.rs"
