[package]
name = "swarf-viz-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Future Present Labs LLC <contact@futurepresentlabs.com>"]
description = "WASM 3D G-code visualizer for swarf"
license = "AGPL-3.0"
repository = "https://github.com/FuturePresentLabs/swarf"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "console",
] }
js-sys = "0.3"
nalgebra-glm = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For parsing G-code
regex = "1"

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
